WebCore:

Bug 15290: REGRESSION (r14184-r14216): Duplicate DOCTYPE definitions when saving files as webarchives

        <https://bugs.webkit.org/show_bug.cgi?id=15290>
        <rdar://problem/5509173>

        Reviewed by Dan Bernstein.

        Tests: webarchive/archive-empty-frame-dom-expected.txt
               webarchive/doctype.html

        * editing/markup.cpp:
        (WebCore::createFullMarkup): If the Node is a Document or a
        DocumentType, don't prepend the <!DOCTYPE> tag since that will
        cause it to be duplicated.
        * loader/archive/cf/LegacyWebArchive.cpp:
        (WebCore::LegacyWebArchive::create): Ditto.

LayoutTests:

        Bug 15290: REGRESSION (r14184-r14216): Duplicate DOCTYPE definitions when saving files as webarchives

        <https://bugs.webkit.org/show_bug.cgi?id=15290>
        <rdar://problem/5509173>

        Reviewed by Dan Bernstein.

        * webarchive/archive-empty-frame-dom-expected.txt: Updated test
        results now that we don't emit two <!DOCTYPE> tags.
        * webarchive/doctype-expected.txt: Added.
        * webarchive/doctype.html: Added.


Canonical link: https://commits.webkit.org/27449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35006 268f45cc-cd09-0410-ab3c-d52691b4dbfc